--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-  <div  class="container">
-    <div id="mensagem">
-      <h1>Tema: Animais</h1>
-    </div>
-    <div class="desenho">
-    <canvas id="myCanvas" width="500" height="400"></canvas>
-    </div>
-    <div class="title">
-      <h1 id="letras-digitadas">Letras:</h1>
-    </div>
-    <div class="teclado">
-       <button class="key">Q</button>
-        <button class="key">W</button>  
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="container">
+      <div id="mensagem">
+        <h1>Tema: Animais</h1>
+      </div>
+      <div class="desenho">
+        <canvas id="myCanvas" width="500" height="400"></canvas>
+      </div>
+      <div class="title">
+        <h1 id="letras-digitadas">Letras:</h1>
+      </div>
+      <div class="teclado">
+        <button class="key">Q</button>
+        <button class="key">W</button>
         <button class="key">E</button>
         <button class="key">R</button>
         <button class="key">T</button>
@@ -28,8 +31,8 @@
         <button class="key">I</button>
         <button class="key">O</button>
         <button class="key">P</button>
-    </div>
-    <div class="teclado">
+      </div>
+      <div class="teclado">
         <button class="key">A</button>
         <button class="key">S</button>
         <button class="key">D</button>
@@ -40,8 +43,8 @@
         <button class="key">K</button>
         <button class="key">L</button>
         <button class="key">Ç</button>
-    </div>
-    <div class="teclado">
+      </div>
+      <div class="teclado">
         <button class="key">Z</button>
         <button class="key">X</button>
         <button class="key">C</button>
@@ -49,13 +52,12 @@
         <button class="key">B</button>
         <button class="key">N</button>
         <button class="key">M</button>
+      </div>
+      <div id="botaozin">
+        <button id="reiniciar">Novo Jogo</button>
+      </div>
     </div>
-    <div id="botaozin">
-    <button id="reiniciar">Novo Jogo</button>
-    </div>
-  </div>
 
-
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
